<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2017 Goldman Sachs.
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.goldmansachs.obevo</groupId>
        <artifactId>obevo-dependencies</artifactId>
        <version>${revision}</version>
        <relativePath>../obevo-dependencies</relativePath>
    </parent>

    <artifactId>obevo-dbmetadata-impl</artifactId>
    <name>${project.artifactId}</name>

    <properties>
        <jacoco.minCoverage>0.15</jacoco.minCoverage>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>animal-sniffer-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <!-- need to ignore the checkstyle ImportControl check as our schemacrawler wrapper code needs to refer
                to some packages in schemacrawler itself, which doesn't work well w/ our core file.
                Would be nice to resolve this eventually -->
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.goldmansachs.obevo</groupId>
            <artifactId>obevo-db</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler</artifactId>
        </dependency>

        <dependency>
            <groupId>org.eclipse.collections</groupId>
            <artifactId>eclipse-collections-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.collections</groupId>
            <artifactId>eclipse-collections</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-dbutils</groupId>
            <artifactId>commons-dbutils</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler-hsqldb</artifactId>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler-postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler-oracle</artifactId>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler-sqlserver</artifactId>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler-db2</artifactId>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler-mysql</artifactId>
        </dependency>
        <dependency>
            <groupId>us.fatehi</groupId>
            <artifactId>schemacrawler-sapiq</artifactId>
        </dependency>


        <dependency>
            <groupId>org.eclipse.collections</groupId>
            <artifactId>eclipse-collections-testutils</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>